[gd_scene load_steps=20 format=3 uid="uid://06q1ik35asbh"]

[ext_resource type="Script" path="res://maps/map.gd" id="1_1x6kq"]
[ext_resource type="Texture2D" uid="uid://c8e86pmrwbub4" path="res://maps/backgrounds/SnowMountainsSky.png" id="1_tu1l3"]
[ext_resource type="Texture2D" uid="uid://clrgqk3axa7vv" path="res://maps/backgrounds/arcticmountains.png" id="2_4mlc7"]
[ext_resource type="PackedScene" uid="uid://p3jlda1m27pr" path="res://objects/player_fly_tux/player.tscn" id="3_vicfd"]
[ext_resource type="PackedScene" uid="uid://1iba13pbminy" path="res://objects/pipes/pipe.tscn" id="4_ap6po"]
[ext_resource type="Texture2D" uid="uid://bl2hfnx5b1k6w" path="res://objects/pipes/window_2.png" id="4_fl1hu"]
[ext_resource type="Texture2D" uid="uid://dtoav6ulevjlw" path="res://UI/game_over.png" id="6_7osr5"]
[ext_resource type="PackedScene" uid="uid://wa7i4u3eh1l4" path="res://objects/heart/heart.tscn" id="6_ivpgc"]
[ext_resource type="PackedScene" uid="uid://dawdf5bq8f78s" path="res://UI/score.tscn" id="7_monjo"]
[ext_resource type="Texture2D" uid="uid://cowelxnn5eiw3" path="res://UI/buttons/exit.png" id="8_ura13"]
[ext_resource type="PackedScene" uid="uid://chjm3ynmt3upt" path="res://scenes/shop_layer.tscn" id="12_nj420"]
[ext_resource type="Theme" uid="uid://bm2ie0ervgafp" path="res://UI/buttons/button.tres" id="35_ncjua"]

[sub_resource type="Shader" id="Shader_ltg1f"]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0,0.0);
uniform float speed = 0.3;


void fragment(){
	COLOR = texture(TEXTURE,UV + (Direction * TIME * speed));
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nt5ev"]
shader = SubResource("Shader_ltg1f")
shader_parameter/Direction = Vector2(1, 0)
shader_parameter/speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w086w"]
shader = SubResource("Shader_ltg1f")
shader_parameter/Direction = Vector2(1, 0)
shader_parameter/speed = 0.2

[sub_resource type="Animation" id="Animation_y2drl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("black:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Game Over:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("score2/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("score2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("score:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_elupy"]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_restart"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("music:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("black:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Game Over:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Game Over:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("score2/Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.5, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("score2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("score:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_brcfn"]
_data = {
"RESET": SubResource("Animation_y2drl"),
"death": SubResource("Animation_elupy")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4abk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="map" type="Node2D"]
script = ExtResource("1_1x6kq")

[node name="background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_nt5ev")
offset_right = 1160.0
offset_bottom = 650.0
texture = ExtResource("1_tu1l3")
expand_mode = 2

[node name="background2" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_w086w")
offset_left = -53.0
offset_top = -7.0
offset_right = 1207.0
offset_bottom = 643.0
texture = ExtResource("2_4mlc7")
expand_mode = 2

[node name="background3" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_w086w")
offset_left = -53.0
offset_top = -7.0
offset_right = 1207.0
offset_bottom = 643.0
texture = ExtResource("2_4mlc7")
expand_mode = 2

[node name="score" parent="." instance=ExtResource("7_monjo")]
z_index = 99
offset_right = 216.0
offset_bottom = 48.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 32
vertical_alignment = 1

[node name="score2" parent="." instance=ExtResource("7_monjo")]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -79.0
offset_right = 15.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="score2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = -11
theme_override_font_sizes/font_size = 32
text = "Tu n'as pas encore 
atteind Compiegne

Appuie pour continuer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player" parent="." instance=ExtResource("3_vicfd")]
z_index = 20
position = Vector2(227, 311)

[node name="pipe" parent="." instance=ExtResource("4_ap6po")]
z_index = 10
position = Vector2(624, 324)

[node name="Sprite2D" type="Sprite2D" parent="pipe"]
z_index = 30
position = Vector2(-1, 0)
texture = ExtResource("4_fl1hu")

[node name="Heart" parent="." instance=ExtResource("6_ivpgc")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="music" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_brcfn")
}
autoplay = "RESET"

[node name="MagasinButton" type="Button" parent="."]
offset_left = 79.0
offset_top = 573.0
offset_right = 182.0
offset_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../ShopLayer/Panel/PetShop/GridContainer2/Item2")
focus_neighbor_top = NodePath("../ShopLayer/Panel/PetShop/GridContainer2/Item2")
focus_neighbor_right = NodePath("../ShopLayer/Panel/PetShop/GridContainer/Item0")
focus_neighbor_bottom = NodePath("../ShopLayer/Panel/PetShop/GridContainer/Item0")
theme = ExtResource("35_ncjua")
text = "Magasin"

[node name="black" type="ColorRect" parent="."]
visible = false
offset_right = 1400.0
offset_bottom = 663.0

[node name="Game Over" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
offset_left = 358.0
offset_top = 374.0
offset_right = 872.0
offset_bottom = 504.0
texture = ExtResource("6_7osr5")

[node name="exit" type="Button" parent="."]
visible = false
z_index = 100
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 445.0
offset_top = 19.0
offset_right = 734.0
offset_bottom = 172.0
grow_horizontal = 0
scale = Vector2(0.52, 0.48)
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_r4abk")
icon = ExtResource("8_ura13")

[node name="ShopLayer" parent="." instance=ExtResource("12_nj420")]
visible = false

[connection signal="timeout" from="PipeTimer" to="." method="create_pipe"]
[connection signal="pressed" from="MagasinButton" to="." method="_on_magasin_button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
